<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.TwoActivity"
    tools:showIn="@layout/activity_two">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="52dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/_hari_tanggal_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_hari_tanggal"
                    android:inputType="datetime"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/_btn_tanggal_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_tanggal"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/_nama_perawat_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_nama_perawat"
                    android:layout_marginBottom="4dp"
                    android:inputType="textCapSentences"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/_no_responden_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_no_responden"
                    android:layout_marginBottom="4dp"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/_umur_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_umur"
                    android:layout_marginBottom="4dp"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/txt_jenis_kelamin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="#ECEFF1"
                android:orientation="vertical"
                android:padding="4dp">

                <Spinner
                    android:id="@+id/_jenis_kelamin_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/input_jenis_kelamin" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/txt_grade_luka" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="#ECEFF1"
                android:orientation="vertical"
                android:padding="4dp">

                <Spinner
                    android:id="@+id/_grade_luka_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/input_grade_luka" />

            </LinearLayout>

            <View
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/txt_luka_sekitar_kulit" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="#ECEFF1"
                android:orientation="vertical"
                android:padding="4dp">

                <Spinner
                    android:id="@+id/_luka_sekitar_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/input_luka_sekitar_kulit" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/txt_jumlah" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="#ECEFF1"
                android:orientation="vertical"
                android:padding="4dp">

                <Spinner
                    android:id="@+id/_jumlah_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/input_jumlah" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>